css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

html, body {
  height: 100%;
}


.icon-block {
  padding: 0px 15px;
}
.icon-block .material-icons {
	font-size: inherit;
}

/* Nav */
.navbar-fixed {
  z-index: 9999 !important;
}

object {
  height: 100%;
}

/* Positioning */
.title-container {
  position: absolute;
  display: block;
  top: 35%;
  width: 100%;
  height: 100vh;
  text-align: center;
  z-index: 1000;
}

.no-margin {
  margin: 0 !important;
}
.no-pad {
  padding: 0 !important;
}
.medpadbox {
  padding: 5vh;
  border: 4px #000000 solid;
}
.bigpad {
  padding-top: 35vh;
  padding-bottom: 35vh;
}
.medmargin {
  height: 10vh;
  margin-top: 5vh;
  margin-bottom: 5vh;
}
.bigmargin {
  height: 30vh;
  margin-top: 30vh;
  margin-bottom: 30vh;
}

/* Fonts */
.subhead-font {
  font-family: 'EB Garamond';
}
.head-font {
  font-family: 'Montserrat';
}

/* Coverr Video */
.homepage-hero-module {
    border-right: none;
    border-left: none;
    position: relative;
}
.no-video .video-container video,
.touch .video-container video {
    display: none;
}
.no-video .video-container .poster,
.touch .video-container .poster {
    display: block !important;
}
.video-container {
    position: absolute;
    bottom: 0%;
    left: 0%;
    height: 100%;
    width: 100%;
    top: 0%;
    overflow: hidden;
    /*background: #000;*/
}

.video-container .poster {
    width: 100%;
    bottom: 0;
    top: 0;
    z-index: 0;
    position: absolute;
}
.video-container .filter {
    z-index: 100;
    position: absolute;
    background: rgba(0, 0, 0, 0.4);
    width: 100%;
}
.video-container video {
    position: absolute;
    height: 100%;
    top: 0;
    z-index: 0;
    bottom: 0;
}
.video-container video.fillWidth {
    width: 100%;
}

